--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apostrophe-boilerplate",
+  "name": "a3-boilerplate",
   "version": "3.0.0-prealpha",
   "description": "Apostrophe 3 Boilerplate Site",
   "main": "app.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apostrophecms/apostrophe-boilerplate"
+    "url": "https://github.com/apostrophecms/a3-boilerplate"
   },
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
