--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "apostrophe": "apostrophecms/apostrophe#3.0",
+    "apostrophe": "github:apostrophecms/apostrophe#3.0",
     "normalize.css": "^8.0.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
@@ -56,7 +56,7 @@
     "node-dev": "^5.2.0",
     "nodemon": "^2.0.4",
     "sass": "^1.26.11",
-    "sass-loader": "^10.0.2",
+    "sass-loader": "^10.0.5",
     "style-loader": "^1.2.1"
   }
 }
