--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "apostrophe": "3.0.0-alpha.2",
+    "apostrophe": "alpha",
     "normalize.css": "^8.0.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
