--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
     "apostrophe": "alpha",
     "normalize.css": "^8.0.1",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
-  },
+    "webpack-cli": "^3.3.12",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.3.0",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.5",
+    "style-loader": "^1.2.1"
+ },
   "nodemonConfig": {
     "verbose": true,
     "watch": [
@@ -46,17 +53,9 @@
     "ext": "json, js, html, scss, vue"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^4.3.0",
     "eslint": "^7.8.0",
     "eslint-config-apostrophe": "^3.4.0",
     "eslint-plugin-node": "^11.1.0",
-    "node-dev": "^5.2.0",
-    "nodemon": "^2.0.4",
-    "sass": "^1.26.11",
-    "sass-loader": "^10.0.5",
-    "style-loader": "^1.2.1"
+    "nodemon": "^2.0.4"
   }
 }
