--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ node_modules
 # Don't commit masters generated on the fly at startup, these import all the rest
 /public/css/master-*.less
 .jshintrc
+RELEASE_ID
