--- a/package.json
+++ b/package.json
@@ -15,23 +15,26 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "apostrophe": "alpha",
-    "normalize.css": "^8.0.1",
-    "sass": "^1.26.11",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "apostrophe": "alpha",
     "babel-loader": "^8.2.2",
     "concurrently": "^3.5.1",
     "css-loader": "^5.0.1",
     "mini-css-extract-plugin": "^1.3.4",
     "node-fetch": "^2.6.1",
+    "normalize.css": "^8.0.1",
     "require-all": "^3.0.0",
+    "sass": "^1.26.11",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.16.0",
     "webpack-cli": "^4.4.0"
   },
   "devDependencies": {
+    "eslint": "^7.16.0",
+    "eslint-config-apostrophe": "^3.4.0",
+    "eslint-plugin-node": "^11.1.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
