Adds nodemon to dev command

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app",
     "build": "webpack && node app @apostrophecms/asset:build",
-    "dev": "node app @apostrophecms/asset:build && webpack serve & ENV=dev node app"
+    "dev": "node app @apostrophecms/asset:build && webpack serve & ENV=dev nodemon app"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "eslint": "^7.16.0",
     "eslint-config-apostrophe": "^3.4.0",
     "eslint-plugin-node": "^11.1.0",
+    "nodemon": "^2.0.7",
     "webpack-dev-server": "^3.11.2"
   }
 }
