--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
     "build": "webpack && node app @apostrophecms/asset:build",
     "dev": "node app @apostrophecms/asset:build && webpack serve & ENV=dev nodemon app"
   },
+  "nodemonConfig": {
+    "ignore": [
+      "node_modules/*",
+      "locales/*",
+      "data/*",
+      "apos-build/*",
+      "public/apos-frontend/*",
+      "public/uploads/*"
+    ],
+    "delay": "2500"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/apostrophecms/a3-boilerplate"
