--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
     "dev": "node app @apostrophecms/asset:build && webpack serve & ENV=dev nodemon app"
   },
   "nodemonConfig": {
-    "ignore": [
-      "node_modules/*",
-      "locales/*",
-      "data/*",
-      "apos-build/*",
-      "public/apos-frontend/*",
-      "public/uploads/*"
+    "verbose": true,
+    "watch": [
+      "./app.js",
+      "./modules/**/*",
+      "./lib/**/*.js",
+      "./views/**/*.html",
+      "./src/**/*"
     ],
-    "delay": "2500"
+    "ignoreRoot": [
+      ".git"
+    ],
+    "ignore": [
+      "locales/*.json",
+      "public/uploads",
+      "public/apos-frontend/*.js",
+      "modules/asset/ui/public/site.js",
+      "data"
+    ],
+    "ext": "json, js, html, scss, vue"
   },
   "repository": {
     "type": "git",
