--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app",
     "build": "webpack && node app @apostrophecms/asset:build",
-    "dev": "node app @apostrophecms/asset:build && webpack serve & ENV=dev nodemon app"
+    "dev": "nodemon --delay 1000ms -x \"npm run build && ENV=dev nodemon app.js\""
   },
   "nodemonConfig": {
     "verbose": true,
@@ -14,7 +14,8 @@
       "./app.js",
       "./modules/**/*",
       "./lib/**/*.js",
-      "./views/**/*.html"
+      "./views/**/*.html",
+      "./src/**/*"
     ],
     "ignoreRoot": [
       ".git"
