Fixes nodemon start script (#15)
* Fixes nodemon start script

* webpack hot reloading and nodemon in the same beast

Co-authored-by: Tom Boutell <tom@apostrophecms.com>

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "start": "node app",
     "build": "webpack && node app @apostrophecms/asset:build",
-    "dev": "node app @apostrophecms/asset:build && webpack serve & ENV=dev nodemon app"
+    "dev-serve": "webpack serve & nodemon app.js",
+    "dev": "node app @apostrophecms/asset:build && npm run dev-serve"
   },
   "nodemonConfig": {
+    "delay": 1000,
     "verbose": true,
     "watch": [
       "./app.js",
