--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
-    "build": "webpack && node app @apostrophecms/asset:build",
+    "build": "webpack",
     "dev-serve": "webpack serve & nodemon app.js",
-    "dev": "node app @apostrophecms/asset:build && npm run dev-serve"
+    "dev": "npm run dev-serve"
   },
   "nodemonConfig": {
     "delay": 1000,
