reverts build script and updates to beta

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "a3-boilerplate",
-  "version": "3.0.0-alpha.1",
+  "version": "3.0.0-beta.1",
   "description": "Apostrophe 3 Boilerplate Site",
   "main": "app.js",
   "scripts": {
     "start": "node app",
-    "build": "webpack",
+    "build": "webpack && node app @apostrophecms/asset:build",
     "dev-serve": "webpack serve & nodemon app.js",
     "dev": "npm run dev-serve"
   },
@@ -40,7 +40,7 @@
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "apostrophe": "alpha",
+    "apostrophe": "beta",
     "babel-loader": "^8.2.2",
     "concurrently": "^3.5.1",
     "css-loader": "^5.0.1",
