--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
-    "build": "webpack && node app @apostrophecms/asset:build",
-    "dev-serve": "webpack serve & nodemon app.js",
-    "dev": "npm run dev-serve"
+    "build": "node app @apostrophecms/asset:build",
+    "dev": "nodemon --delay 1000ms -x \"nodemon app.js\""
   },
   "nodemonConfig": {
     "delay": 1000,
@@ -25,8 +24,6 @@
       "locales/*.json",
       "public/uploads",
       "public/apos-frontend/*.js",
-      "modules/asset/ui/public/site.js",
-      "modules/asset/ui/public/site.css",
       "data"
     ],
     "ext": "json, js, html, scss, vue"
@@ -38,27 +35,13 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
     "apostrophe": "beta",
-    "babel-loader": "^8.2.2",
-    "concurrently": "^3.5.1",
-    "css-loader": "^5.0.1",
-    "mini-css-extract-plugin": "^1.3.4",
-    "node-fetch": "^2.6.1",
-    "normalize.css": "^8.0.1",
-    "require-all": "^3.0.0",
-    "sass": "^1.26.11",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.16.0",
-    "webpack-cli": "^4.4.0"
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "eslint": "^7.16.0",
     "eslint-config-apostrophe": "^3.4.0",
     "eslint-plugin-node": "^11.1.0",
-    "nodemon": "^2.0.7",
-    "webpack-dev-server": "^3.11.2"
+    "nodemon": "^2.0.7"
   }
 }
