--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app",
     "dev": "nodemon --delay 1000ms -x \"nodemon app.js\"",
     "build": "NODE_ENV=production node app @apostrophecms/asset:build",
-    "production-start": "NODE_ENV=production node app"
+    "production-start": "NODE_ENV=production node app",
+    "release": "npm install && npm run build && node app @apostrophecms/migration:migrate"
   },
   "nodemonConfig": {
     "delay": 1000,
