--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
-    "dev": "nodemon --delay 1000ms -x \"nodemon app.js\"",
+    "dev": "nodemon",
     "build": "NODE_ENV=production node app @apostrophecms/asset:build",
-    "production-start": "NODE_ENV=production node app",
+    "serve": "NODE_ENV=production node app",
     "release": "npm install && npm run build && node app @apostrophecms/migration:migrate"
   },
   "nodemonConfig": {
