nodemon ignore UI files

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
       ".git"
     ],
     "ignore": [
+      "**/ui/apos",
+      "**/ui/src",
+      "**ui/public",
       "locales/*.json",
       "public/uploads",
       "public/apos-frontend/*.js",
