--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "apostrophe": "^3.0.0",
+    "apostrophe": "3.25.0-alpha.2022080101",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
