--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "a3-boilerplate",
+  "name": "starter-kit-essentials",
   "version": "1.0.0",
-  "description": "Apostrophe 3 Boilerplate Site",
+  "description": "Apostrophe 3 Essential Starter Kit Site",
   "main": "app.js",
   "scripts": {
     "start": "node app",
