--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "apostrophe": "^3.53.0",
     "normalize.css": "^8.0.1",
-    "@michelin-cxf/apostrophe-headless": "^1.1.0"
+    "@michelin-cxf/apostrophe-headless": "apostrophecms/external-front"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
