Change readme for clarification

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ node_modules
 # Don't commit masters generated on the fly at startup, these import all the rest
 /public/css/master-*.less
 .jshintrc
+.DS_Store
+
