--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "apostrophe": "apostrophecms/apostrophe",
+    "apostrophe": "apostrophecms/apostrophe#pro-5248",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
