--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "apostrophe": "^3.53.0",
+    "apostrophe": "apostrophecms/apostrophe",
     "normalize.css": "^8.0.1",
     "@michelin-cxf/apostrophe-headless": "apostrophecms/external-front"
   },
