--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "license": "MIT",
   "dependencies": {
     "apostrophe": "^3.53.0",
+    "deepl-node": "^1.11.0",
+    "dotenv": "^16.3.1",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
