--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "ApostropheCMS Essential Starter Kit Site",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node app",
     "dev": "nodemon",
