--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "apostrophe": "^4.0.0",
+    "apostrophe": "github:haroun/apostrophe",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
