--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
   "license": "MIT",
   "dependencies": {
     "@apostrophecms/vite": "github:apostrophecms/vite#initial-implementation",
+    "@vitejs/plugin-react": "^4.3.3",
     "apostrophe": "github:apostrophecms/apostrophe#feature-vite",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
