--- a/package.json
+++ b/package.json
@@ -40,19 +40,23 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "@apostrophecms/vite": "github:apostrophecms/vite",
-    "@vitejs/plugin-react": "^4.3.3",
-    "apostrophe": "github:apostrophecms/apostrophe",
-    "normalize.css": "^8.0.1",
+    "@apostrophecms/vite": "1.0.0-beta.1",
+    "apostrophe": "github:apostrophecms/apostrophe#hotfix-build-config",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "svelte": "^5.1.3",
+    "vue": "^3.5.12"
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.0.0",
     "eslint-config-apostrophe": "^4.0.0",
     "nodemon": "^3.0.1",
-    "postcss": "^8.4.47",
+    "normalize.css": "^8.0.1",
     "tailwindcss": "^3.4.14"
   }
 }
