--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "starter-kit-essentials",
   "version": "1.0.0",
   "description": "ApostropheCMS Essential Starter Kit Site",
-  "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node app",
     "dev": "nodemon",
