--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "license": "MIT",
   "dependencies": {
     "@apostrophecms/vite": "1.0.0-beta.1",
-    "apostrophe": "github:apostrophecms/apostrophe#hotfix-build-config",
+    "apostrophe": "github:apostrophecms/apostrophe#fix-players-and-when",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
