--- a/package.json
+++ b/package.json
@@ -24,15 +24,13 @@
       ".git"
     ],
     "ignore": [
-      "**/ui/apos/",
-      "**/ui/src/",
-      "**/ui/public/",
+      "**/ui/",
       "locales/*.json",
       "public/uploads/",
       "public/apos-frontend/*.js",
       "data/"
     ],
-    "ext": "json, js, html, scss, vue"
+    "ext": "json, js, cjs, html"
   },
   "repository": {
     "type": "git",
