--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "@apostrophecms/vite": "1.0.0-beta.1",
+    "@apostrophecms/vite": "github:apostrophecms/vite",
     "apostrophe": "github:apostrophecms/apostrophe",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
