--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "eslint-config-apostrophe": "github:apostrophecms/eslint-config-apostrophe#pro-8109-upgrade-dependencies",
+    "eslint-config-apostrophe": "^6.0.0",
     "nodemon": "^3.0.1"
   }
 }
