static build, with a blog

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
+    "@apostrophecms/blog": "^1.0.6",
     "@apostrophecms/vite": "^1.0.0",
     "apostrophe": "^4.9.0",
     "normalize.css": "^8.0.1"
