--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "license": "MIT",
   "dependencies": {
     "@apostrophecms/vite": "apostrophecms/vite#fix-windows-1",
-    "apostrophe": "^4.9.0",
+    "apostrophe": "apostrophecms/apostrophe#fix-windows-1",
     "cross-env": "^10.1.0",
     "normalize.css": "^8.0.1"
   },
