--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   "license": "MIT",
   "dependencies": {
     "@apostrophecms/vite": "^1.0.0",
-    "apostrophe": "^4.9.0",
+    "apostrophe": "^4.23.0",
+    "cross-env": "^10.1.0",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
