--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "license": "MIT",
   "dependencies": {
     "@apostrophecms/vite": "^1.0.0",
-    "apostrophe": "^4.23.0",
+    "apostrophe": "github:apostrophecms/apostrophe#feature-styles&path:packages/apostrophe",
     "cross-env": "^10.1.0",
     "normalize.css": "^8.0.1"
   },
