styles basic setup

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "@apostrophecms/vite": "^1.0.0",
-    "apostrophe": "^4.23.0",
+    "@apostrophecms/vite": "workspace:*",
+    "apostrophe": "workspace:*",
     "cross-env": "^10.1.0",
     "normalize.css": "^8.0.1"
   },
