--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   "author": "Apostrophe Technologies, Inc.",
   "license": "MIT",
   "dependencies": {
-    "@apostrophecms/vite": "workspace:*",
-    "apostrophe": "workspace:*",
+    "@apostrophecms/vite": "1.1.1",
+    "apostrophe": "4.25.0",
     "cross-env": "^10.1.0",
     "normalize.css": "^8.0.1"
   },
